--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  intl:
+  fancy_bottom_navigation: ^0.3.2
+  font_awesome_flutter: 
 
 dev_dependencies:
   flutter_test:
