added even more stuff

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl:
   fancy_bottom_navigation: ^0.3.2
   font_awesome_flutter: 
+  swipedetector:
 
 dev_dependencies:
   flutter_test:
