--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ android/app/google-services.json
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
-
+**/android/app/src/main/res/values/secrets.xml
 # iOS/XCode related
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
