--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="five_stars"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="@string/google_maps_api_key"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
