--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,12 +6,19 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    <uses-permission android:name=
+        "android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name=
+        "android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="five_stars"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="@string/google_maps_api_key"/>
+               
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
