--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^0.4.0
   http:
   dio:
+  liquid_pull_to_refresh: ^1.1.0
   google_maps_flutter:
   flutter_verification_code_input:
       git:
