--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   firebase_core: ^0.4.0
   http:
   dio:
-  liquid_pull_to_refresh: ^1.1.0
+  liquid_pull_to_refresh: 
+    path: ../Liquid-Pull-To-Refresh/
   google_maps_flutter:
   flutter_verification_code_input:
       git:
