--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^0.4.0
   http:
   dio:
+  permission_handler:
   liquid_pull_to_refresh: 
     path: ../Liquid-Pull-To-Refresh/
   google_maps_flutter:
