--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         "android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name=".FiveStarsApplication"
         android:label="Пять звёзд"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
