--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg:
   http:
   cloud_firestore:
+  firebase_storage:
+  multi_image_picker:
   date_range_picker: 
   dio: ^2.1.6
   location_permissions:
