--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   http:
   cloud_firestore:
   firebase_storage:
-  simple_permissions:
-  multi_image_picker:
+  image_picker:
+  better_uuid:
+  photo_view:
   date_range_picker: 
   dio: ^2.1.6
   location_permissions:
