--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   firebase_storage:
   image_picker:
   better_uuid:
-  photo_view:
+  flutter_typeahead:
+  photo_view: ^0.4.0
   date_range_picker: 
   dio: ^2.1.6
   location_permissions:
